tmas.yaml
---
# tmas-sysmng service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tmas-sysmng # 배포 이름
  labels:
    app: tmas-sysmng # 배포 이름
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tmas-sysmng # 배포 이름
  template:
    metadata:
      labels:
        app: tmas-sysmng # 배포 이름
    spec:
      volumes:
      - name: data-volume # 볼륨명
        persistentVolumeClaim:
          claimName: nas-shared-pvc
      containers:
      - name: tmas-sysmng # 컨테이너 이름
        image: impix.kr.ncr.ntruss.com/mes:v0.1 # 이미지명 
        imagePullPolicy: Always
        ports: # 컨테이너 내부에서 사용하는 포트 명시
        - name: web
          containerPort: 8080
          protocol: TCP
        volumeMounts: # 영구 저장할 볼륨 (디렉토리) 설정
        - name: data-volume # 위에서 명시한 볼륨명 지정
          mountPath: /data/mes_file # 서비스에서 필요한 경로 지정
        imagePullSecrets:            # 해당 images 를 받아올때 사용할 secret ojbect 설정
        - name: ncp-registry
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - tmas-sysmng
            topologyKey: "kubernetes.io/hostname"         
---
apiVersion: v1
kind: Service
metadata:
  name: tmas-sysmng-svc # 서비스 이름
spec:
  selector:
    app: tmas-sysmng # 연결할 Deployment의 이름
  type: ClusterIP
  ports:
  - name: web
    port: 8080
    protocol: TCP
    

---
# tmas-womng service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tmas-womng # 배포 이름
  labels:
    app: tmas-womng # 배포 이름
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tmas-womng # 배포 이름
  template:
    metadata:
      labels:
        app: tmas-womng # 배포 이름
    spec:
      volumes:
      - name: data-volume # 볼륨명
        persistentVolumeClaim:
          claimName: nas-shared-pvc
      containers:
      - name: tmas-womng # 컨테이너 이름
        image: impix.kr.ncr.ntruss.com/mes:v0.1 # 이미지명 
        imagePullPolicy: Always
        ports: # 컨테이너 내부에서 사용하는 포트 명시
        - name: web
          containerPort: 8080
          protocol: TCP
        volumeMounts: # 영구 저장할 볼륨 (디렉토리) 설정
        - name: data-volume # 위에서 명시한 볼륨명 지정
          mountPath: /data/mes_file # 서비스에서 필요한 경로 지정
        imagePullSecrets:            # 해당 images 를 받아올때 사용할 secret ojbect 설정
        - name: ncp-registry
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - tmas-womng
            topologyKey: "kubernetes.io/hostname"         
---
apiVersion: v1
kind: Service
metadata:
  name: tmas-womng-svc # 서비스 이름
spec:
  selector:
    app: tmas-womng # 연결할 Deployment의 이름
  type: ClusterIP
  ports:
  - name: web
    port: 8080
    protocol: TCP
    
    
---
# tmas-eqmng service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tmas-eqmng # 배포 이름
  labels:
    app: tmas-eqmng # 배포 이름
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tmas-eqmng # 배포 이름
  template:
    metadata:
      labels:
        app: tmas-eqmng # 배포 이름
    spec:
      volumes:
      - name: data-volume # 볼륨명
        persistentVolumeClaim:
          claimName: nas-shared-pvc
      containers:
      - name: tmas-eqmng # 컨테이너 이름
        image: impix.kr.ncr.ntruss.com/mes:v0.1 # 이미지명 
        imagePullPolicy: Always
        ports: # 컨테이너 내부에서 사용하는 포트 명시
        - name: web
          containerPort: 8080
          protocol: TCP
        volumeMounts: # 영구 저장할 볼륨 (디렉토리) 설정
        - name: data-volume # 위에서 명시한 볼륨명 지정
          mountPath: /data/mes_file # 서비스에서 필요한 경로 지정
        imagePullSecrets:            # 해당 images 를 받아올때 사용할 secret ojbect 설정
        - name: ncp-registry
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - tmas-eqmng
            topologyKey: "kubernetes.io/hostname"         
---
apiVersion: v1
kind: Service
metadata:
  name: tmas-eqmng-svc # 서비스 이름
spec:
  selector:
    app: tmas-eqmng # 연결할 Deployment의 이름
  type: ClusterIP
  ports:
  - name: web
    port: 8080
    protocol: TCP
    
   
---
# tmas-qcmng service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tmas-qcmng # 배포 이름
  labels:
    app: tmas-qcmng # 배포 이름
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tmas-qcmng # 배포 이름
  template:
    metadata:
      labels:
        app: tmas-qcmng # 배포 이름
    spec:
      volumes:
      - name: data-volume # 볼륨명
        persistentVolumeClaim:
          claimName: nas-shared-pvc
      containers:
      - name: tmas-qcmng # 컨테이너 이름
        image: impix.kr.ncr.ntruss.com/mes:v0.1 # 이미지명 
        imagePullPolicy: Always
        ports: # 컨테이너 내부에서 사용하는 포트 명시
        - name: web
          containerPort: 8080
          protocol: TCP
        volumeMounts: # 영구 저장할 볼륨 (디렉토리) 설정
        - name: data-volume # 위에서 명시한 볼륨명 지정
          mountPath: /data/mes_file # 서비스에서 필요한 경로 지정
        imagePullSecrets:            # 해당 images 를 받아올때 사용할 secret ojbect 설정
        - name: ncp-registry
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - tmas-qcmng
            topologyKey: "kubernetes.io/hostname"         
---
apiVersion: v1
kind: Service
metadata:
  name: tmas-qcmng-svc # 서비스 이름
spec:
  selector:
    app: tmas-qcmng # 연결할 Deployment의 이름
  type: ClusterIP
  ports:
  - name: web
    port: 8080
    protocol: TCP
